# Django_Tweet

./: .gitignore  build_files.sh  pyproject.toml  requirements.txt  vercel.json
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
chat/: admin.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_remove_conversation_ai_model_and_more.py
static/css/: styles.css
static/js/: app.js  chat.js
templates/: base.html
templates/accounts/: login.html  profile.html  signup.html
templates/chat/: conversation.html  home.html
templates/chat/partials/: sidebar.html
tweet_project/: settings.py  urls.py  wsgi.py
